Fixed footer since it was causing extra whitespace.

--- a/css/homePage.css
+++ b/css/homePage.css
@@ -40,7 +40,6 @@ footer {
   align-items: center;
   color: #3F403F;
   height: 80px;
-  width: 100vw;
 }
 footer > a {
   background-color: #3F403F;
